crates/rstest-bdd-macros/tests/ui/datatable_duplicate_attr.stderr
error: invalid step function signature: duplicate `#[datatable]` attribute
 --> tests/ui/datatable_duplicate_attr.rs:6:35
  |
6 | fn step(#[datatable] #[datatable] table: Vec<Vec<String>>) {}
  |                                   ^^^^^
  |
  = help: Use `#[given] fn name(ctx: &rstest_bdd::StepContext, ...)` and valid fixtures.
